<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cameraFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.addstory.camera.CameraFragment">

    <androidx.camera.view.PreviewView
        android:id="@+id/view_finder"
        android:layout_width="0dp"
...
        android:src="@drawable/ic_close"
        android:contentDescription="@string/close_camera"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btn_capture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@null"
        android:contentDescription="@string/take_a_photo"
        app:srcCompat="@drawable/bg_capture_button"
...
